--- a/.github/workflows/cmake-build-multiplatform.yml
+++ b/.github/workflows/cmake-build-multiplatform.yml
@@ -30,6 +30,8 @@ jobs:
             c_compiler: cl
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - name: Set reusable strings
         id: strings
         shell: bash
