--- a/.github/workflows/cmake-build-multiplatform.yml
+++ b/.github/workflows/cmake-build-multiplatform.yml
@@ -46,7 +46,7 @@ jobs:
           -DCMAKE_CXX_STANDARD=20
           -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
           -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-          -G ninja
+          -G Ninja
           -S ${{ github.workspace }}
 
       - name: Build
