--- a/.github/workflows/cmake-build-multiplatform.yml
+++ b/.github/workflows/cmake-build-multiplatform.yml
@@ -54,7 +54,6 @@ jobs:
         run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
 
       - name: Upload
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v4
         with:
-          path: ./${ { matrix.config.artifact } }
-          name: ${ { matrix.config.artifact } }
+          path: ${{ steps.strings.outputs.build-output-dir }}/*web*
