--- a/.github/workflows/cmake-build-multiplatform.yml
+++ b/.github/workflows/cmake-build-multiplatform.yml
@@ -18,9 +18,8 @@ jobs:
         c_compiler: [gcc, cl]
         include:
           - os: windows-latest
-            c_compiler: cl
-            cpp_compiler: cl
-            enviroment_scripts: "C:/Program Files/Microsoft Visual Studio/2022/Enterprise/VC/Auxiliary/Build/vcvarsall.bat"
+            c_compiler: "C:/msys64/mingw64/bin/cl"
+            cpp_compiler: "C:/msys64/mingw64/bin/cl"
           - os: ubuntu-latest
             c_compiler: gcc
             cpp_compiler: g++
@@ -57,3 +56,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           path: ${{ steps.strings.outputs.build-output-dir }}/*web*
+          name: web-${{ matrix.os }}
